# dbt_bq

./: .user.yml  README.md  profiles.yml  pyproject.toml
dbt_bq/: dbt_project.yml
dbt_bq/macros/: cents_to_dollars.sql  extract_period.sql
dbt_bq/models/silver/: _silver_models.yml  silver_customers.sql  silver_orders_2023.sql  silver_orders_2024.sql  silver_products.sql  silver_stores.sql  silver_supplies.sql
dbt_bq/models/staging/: _staging_models.yml  _staging_sources.yml  stg_customers.sql  stg_orders_2023.sql  stg_orders_2024.sql  stg_products.sql  stg_stores.sql  stg_supplies.sql
dbt_bq/snapshots/: stores_snapshot.sql
