[project]
name = "dbt-bq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.8.3",
    "dbt-core>=1.8.8",
    "pre-commit>=4.0.1",
    "sqlfluff-templater-dbt>=3.2.5",
    "sqlfluff>=3.2.5",
    "taskipy>=1.14.0",
]

[tool.taskipy.tasks]
fix = "sqlfluff fix models && sqlfluff fix snapshots"
